--- a/javatutorial/6/index.html
+++ b/javatutorial/6/index.html
@@ -54,7 +54,7 @@
     <p>El bucle <w>for</w> s'utilitza freqüentment per a iterar en un rang de valors. Anem 
     a escriure un bucle-for per a imprimir números de 0 a 9 a la mateixa línia:</p>
 
-    <stepper style="--sc-h:8; --mm-h:4.2; --sh-h:3; --ex-h:6.2; --sc-w:22;    --sc-mh:8.6; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+    <stepper style="--sc-h:5; --mm-h:2; --sh-h:1; --ex-h:3; --sc-w:22;    --sc-mh:5; --mm-mh:2; --sh-mh:1; --ex-mh:3;">
         <step>
             <explanation>
             </explanation>
@@ -687,7 +687,7 @@
     <p>Veiem un altre exemple. Calculem la suma dels números enters des de <w>ini</w> fins a <w>fin</w>.</p>
 
     <p>Farem una execució del programa per a <w>ini = 2</w> i <w>fin = 5</w>, aleshores la suma serà <w>2 + 3 + 4 + 5 = 14</w>.</p>
-    <stepper style="--sc-h:8; --mm-h:6.8; --sh-h:5.8; --ex-h:3; --sc-w:22;    --sc-mh:14; --mm-mh:6.8; --sh-mh:5.8; --ex-mh:3;">
+    <stepper style="--sc-h:9; --mm-h:4; --sh-h:3; --ex-h:1; --sc-w:22;    --sc-mh:9; --mm-mh:4; --sh-mh:3; --ex-mh:1;">
         <step>
             <explanation></explanation>
             <sc java>
@@ -1255,7 +1255,7 @@
 
 
     <p>Una altre petit exemple, el programa "Endevina el número":</p>
-    <stepper  style="--sc-h:12; --mm-h:3.2; --sh-h:10.8; --ex-h:3.2; --sc-w:26;    --sc-mh:8.6; --mm-mh:3.2; --sh-mh:10.8; --ex-mh:3.2;">
+    <stepper  style="--sc-h:5; --mm-h:1; --sh-h:7; --ex-h:1; --sc-w:26;    --sc-mh:5; --mm-mh:1; --sh-mh:7; --ex-mh:1;">
         <step>
             <explanation>
             </explanation>
@@ -1674,7 +1674,7 @@
 
     <p>Veiem un petit exemple, que imprimeix una variable mentre sigui menor a 5:</p>
     
-    <stepper style="--sc-h:5; --mm-h:3.2; --sh-h:3.2; --ex-h:3.2; --sc-w:24;    --sc-mh:8.6; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+    <stepper style="--sc-h:5; --mm-h:1; --sh-h:1; --ex-h:1; --sc-w:24;    --sc-mh:5; --mm-mh:1; --sh-mh:1; --ex-mh:1;">
         <step>
             <explanation></explanation>
             <sc java>
@@ -2003,7 +2003,7 @@
     </info>
 
     <h3>do-while</h3>
-    <p>En el bucle <w>do-while</w>, el bloc de codi s'exeuta primer, i la condició s'avalua després. Si la condició és 
+    <p>En el bucle <w>do-while</w>, el bloc de codi s'executa primer, i la condició s'avalua després. Si la condició és 
     <w>true</w> el bloc es torna a executar. D'aquesta manera es garanteix que el bloc s'executarà al menys una vegada.</p>
 
     <p>La seva sintaxi és:</p>
@@ -2015,7 +2015,7 @@
 
     <p>Un bon exemple és el següent programa, que llegeix dades de l'entrada stàndard fins que s'introdueix un cert valor.</p>
 
-    <stepper style="--sc-h:5; --mm-h:3.2; --sh-h:8.6; --ex-h:4.8; --sc-w:20;    --sc-mh:8.6; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+    <stepper style="--sc-h:6; --mm-h:1; --sh-h:5; --ex-h:3; --sc-w:20;    --sc-mh:6; --mm-mh:1; --sh-mh:5; --ex-mh:3;">
         <step>
             <explanation></explanation>
             <sc java>
@@ -2292,7 +2292,6 @@
                     valor = scanner.nextInt();
                     System.out.println(valor);
                 } while (valor != 0);
-
                 <h>// el programa continua per aqui...</h>
             </sc>
             <mem>
