--- a/sofishow/index.html
+++ b/sofishow/index.html
@@ -8,52 +8,146 @@
 
 <header>
     <h1>Sofi Show</h1>
-    
+
     <abstract>
-        <host>@fd</host>
-        <shell>
-            ls /home
-        </shell>
 
-        <shell>
-            ls /
-        </shell>
-
-        <sc java>
-            System.mek());
-        </sc>
-
-        <scfile>
-            Main.java
-        </scfile>
-        <sc java data-line="5,6,7-9">
-            Lalala();
-            {
-                klsdklf;
-            }
-            {
-            holaa
-            question
-            tal
-            { }
-            }
-        </sc>
-        <p>
-            <mo>File</mo><mo>New</mo><mo>Activity</mo>
-        </p>
-        <p>
-            <mo>New</mo><mo>Activity</mo>
-        </p>
-        <p>
-            <mo>Activity</mo>
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus pretium est condimentum congue. Nam lobortis est eu lacinia venenatis. Aliquam erat volutpat.
-        </p>
     </abstract>
 </header>
 
 <section>
+    
+    <stepper style="--sc-h:1; --mm-h:2; --sh-h:8.6; --ex-h:1; --sc-w:20;    --sc-mh:1; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+        <step>
+            <explanation>
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+            </explanation>
+            <sc java>
+                int valor;
+            </sc>
+            <mem></mem>
+            <shell>
+                <in>3 5 7 0 11</in>
+            </shell>
+        </step>
+    </stepper>
+
+    <stepper style="--sc-h:2; --mm-h:2.2; --sh-h:8.6; --ex-h:2; --sc-w:20;    --sc-mh:2; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+        <step>
+            <explanation>
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+            </explanation>
+            <sc java>
+                int valor;
+                valor = scanner.nextInt();
+            </sc>
+            <mem></mem>
+            <shell>
+                <in>3 5 7 0 11</in>
+            </shell>
+        </step>
+    </stepper>
+
+    <stepper style="--sc-h:5; --mm-h:2.2; --sh-h:8.6; --ex-h:10; --sc-w:20;    --sc-mh:5; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+        <step>
+            <explanation>
+                aaaaaa dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                dsafl jksfj kl sfkl jfsadk jlkfj lksfdjlk jsfdjlk jsdfj lsfdj klsfa js lkj fsda jdkasfj klj sfdlj k fklj safdlj lkasdjklasdfjlk sdlkjsafdlj d jasfdj fadslfasd klsfdjl kfsdalkj dfsa jlkj dsfal jlkklj ldsfj sfda
+                fdasj kaj lkjdsfl jsfadl jasfdlkj  ldsflk jsfadl j fdsln sdlfj sfjsdfkkjklsfdjklsdjf klsfd lsdjfklj dlsfj lksdjflj lofj lsdfj 
+                zaaaaaa
+            </explanation>
+            <sc java>
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+            </sc>
+            <mem></mem>
+            <shell>
+                <in>3 5 7 0 11</in>
+            </shell>
+        </step>
+    </stepper>
+
+    <stepper style="--sc-h:5; --mm-h:2.2; --sh-h:8.6; --ex-h:4.8; --sc-w:20;    --sc-mh:10; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+        <step>
+            <explanation></explanation>
+            <sc java>
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+            </sc>
+            <mem></mem>
+            <shell>
+                <in>3 5 7 0 11</in>
+            </shell>
+        </step>
+    </stepper>
+
+    <stepper style="--sc-h:5; --mm-h:2.2; --sh-h:8.6; --ex-h:4.8; --sc-w:20;    --sc-mh:30; --mm-mh:4.2; --sh-mh:3.2; --ex-mh:6.4;">
+        <step>
+            <explanation></explanation>
+            <sc java>
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+                int valor;
+                do {
+                    valor = scanner.nextInt();
+                    System.out.println(valor);
+                } while (valor != 0);
+            </sc>
+            <mem></mem>
+            <shell>
+                <in>3 5 7 0 11</in>
+            </shell>
+        </step>
+    </stepper>
+
     <h2>Ut interdum libero</h2>
 
     <check>Curabitur ultricies</check>
