--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -592,7 +592,7 @@
         <li><w>></w>  (major que)</li>
         <li><w>>=</w> (major o igual que)</li>
         <li><w><</w>  (menor que)</li>
-        <li><w><=</w> (meno o igual que)</li>
+        <li><w><=</w> (menor o igual que)</li>
     </ul>
 
     <p>El resultat d'aplicar un d'aquests operadors relacionals és de 
