--- a/javatutorial/6/index.html
+++ b/javatutorial/6/index.html
@@ -14,8 +14,8 @@
             i <w>do-while</w>.
         </p>
         <p>Aprendràs:</p>
-        <check>A utlitzar la sentència <strong>for</strong></check>
-        <check>A utlitzar les sentències <strong>while</strong> i <strong>do-while</strong></check>
+        <check>A utilitzar la sentència <strong>for</strong></check>
+        <check>A utilitzar les sentències <strong>while</strong> i <strong>do-while</strong></check>
     </abstract>
 </header>
 
