--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -80,7 +80,7 @@
             </sc>
         </li>
         <li>
-            <p>Crea un destino llamado <w>MiHipotecaFragment</w>:</p>
+            <p>Crea un destino en el <file>nav_graph.xml</file>llamado <w>MiHipotecaFragment</w>:</p>
 
             <p>Configura el ViewBinding:</p>
 
