--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -963,7 +963,7 @@
     </scfile>
     <sc java>
         // ...
-        MutableLiveData<Boolean> calculando = new MutableLiveData&lt;&gt;();
+        MutableLiveData&lt;Boolean&gt; calculando = new MutableLiveData&lt;&gt;();
 
         // ...
         @Override
