--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -96,7 +96,7 @@
                 import androidx.fragment.app.Fragment;
 
                 public class MiHipotecaFragment extends Fragment {
-                    private FragmentHipotecaBinding binding;
+                    private FragmentMiHipotecaBinding binding;
 
                     @Override
                     public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
