--- a/webtasks/index.html
+++ b/webtasks/index.html
@@ -10,7 +10,7 @@
     <h1>Web Tasks</h1>
 
     <abstract>
-        En aquesta activitat desenvolupareu una aplicació web que consisteix en un gestor de tasques.
+        <p>En aquesta activitat desenvolupareu una aplicació web que consisteix en un gestor de tasques.</p>
 
     </abstract>
 </header>
@@ -356,4 +356,20 @@
         }
     </sc>
 
+</section>
+
+<section>
+    <h2>Entrega</h2>
+    
+    <p>
+        Caldrà que publiqueu el codi en un repositori de github amb el nom: <name>smx-m8-a3</name>. Aquest repositori
+        haurà de contenir els següents arxius:
+    </p>
+
+    <ul>
+        <li><p><file>index.html</file>: el fitxer amb la versió estàtica de la pàgina</p></li>
+        <li><p><file>index.php</file>: el fitxer amb la versió dinàmica de la pàgina</p></li>
+        <li><p><file>setup.sh</file>: el fitxer amb les comandes necessàries per a posar en funcionament la webapp 
+            (instal·lació de paquets, creació de la base de dades)</p></li>
+    </ul>
 </section>
