--- a/javatutorial/6/index.html
+++ b/javatutorial/6/index.html
@@ -38,13 +38,13 @@
 
     <ul>
         <li><p><strong>inicialització</strong>: s'executa una vegada abans 
-        que comenci el bucle. Normalment s'utilitza per a incialitzar variables.
+        que comenci el bucle. Normalment s'utilitza per a inicialitzar variables.
         Aquestes variables només es poden utilitzar a dintre del bucle.</p></li>
         <li><p><strong>condició</strong>: és una expressió booleana que determina
         si s'ha de fer la següent iteració del bucle. Si és <w>false</w> el 
         bucle finalitza.</p></li>
         <li><p><strong>modificació</strong>: s'executa després de cada iteració 
-        del bucle. Normalment d'utilitza per a modificar les variables del bucle.</p></li>
+        del bucle. Normalment s'utilitza per a modificar les variables del bucle.</p></li>
     </ul>
 
     <p>A dintre del bloc del bucle, el programa pot realitzar qualssevol sentències vàlides.
@@ -1233,7 +1233,7 @@
     <p>Al següent exemple només s'especifica la condició, no la incialització 
         ni la modificació. El <strong>for</strong> d'aquest exemple avalua 
         si la paraula llegida amb l'scanner és igual a <string>si</string>. 
-        El bucle fara iteracions del bloc fins que la condició sigui <w>false</w>, és a dir,
+        El bucle farà iteracions del bloc fins que la condició sigui <w>false</w>, és a dir,
         fins que es llegeixi un String distint de <string>si</string>.</p>
     
     <sc java>
@@ -1548,7 +1548,7 @@
 
     <h3>Bucles niats</h3>
     <p>És possible niar un bucle-for dintre d'un altre bucle-for. Ens pot servir per a processar 
-        estructures multidimensionals como taules (matrius), cubs, etc...
+        estructures multidimensionals com taules (matrius), cubs, etc...
     </p>
 
     <p>Com a exemple, el següent programa imprimeix la taula de mutliplicar del <w>1</w> fins al <w>9</w>:</p>
