--- a/javatutorial/2/index.html
+++ b/javatutorial/2/index.html
@@ -316,7 +316,7 @@
         <question text>
             <statement>
                 <p>Escriu el valor de cada variable, després de que s'executi 
-                    cada sentència
+                    cada sentència d'aquest programa:
                 </p>
             </statement>
 
